feat: update review

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Hez Solea, chaque rideau est une touche de lumière et de raffinement. " />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
